--- a/subdomain.html
+++ b/subdomain.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HACKED BY RAHUL</title>
+    <title>HACKED BY BUGHUNTER</title>
     <style>
         body {
             background-color: #000;
